--- a/TheTicDiem/app/build.gradle
+++ b/TheTicDiem/app/build.gradle
@@ -32,4 +32,5 @@ dependencies {
     implementation 'com.google.android.material:material:1.2.0-alpha05'
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
     implementation 'net.sourceforge.jtds:jtds:1.3.1'
+    implementation 'com.google.android.material:material:1.2.0-alpha05'
 }
